# R-Type

./: .gameEnginePull.sh  .gamePull.sh  .gitignore  .installHeader.ps1  .installHeader.sh  .renginePull.sh  CMakeLists.txt  CODE_OF_CONDUCT.md  Client.cpp  Dockerfile  Makefile  README  README.md  Rengine.hpp  RengineGraphics.hpp  RengineNetworkClient.hpp  buildInstaller.sh  buildRelease.sh  client  compile.ps1  compile.sh  compileDocker.sh  compile_flags.txt  conanfile.txt  doxygen.sh  install.ps1  install.sh  lint.sh  serverConfig.json  uninstall.sh  updateAssets.sh
.github/workflows/: gameengine-dev.yml  gameengine-release.yml  graphic.yml  server.yml
.githubs/workflows/: gameengine-release.yml
BSFML/JsonManager/: JsonManager.cpp  JsonManager.hpp
BSFML/LuaManager/: LuaManager.cpp  LuaManager.hpp
BSFML/RessourceManager/: RessourceManager.hpp
BSFML/Texture/: Texture.cpp  Texture.hpp
BSFML/Timer/: Timer.cpp  Timer.hpp
BSFML/Vector/: Vector2.cpp  Vector2.hpp
BSFML/window/: Window.cpp  Window.hpp  WindowParser.cpp  WindowParser.hpp
assets/: window.json
assets/attacks/: bigFireBall.json  defaultShoot1.json  defaultShoot2.json  defaultShoot3.json  fireBallSpam.json  template.json  tiny_arrows1.json
assets/entities/: Background.json  Message.json  bigFireBall.json  dragon_bleu.json  dragon_noir.json  dragon_rouge.json  entities.json  id.json  immobile_player.json  missile1.json  missile2.json  player.json  playerDefault.json  projectile.json  skeletonDragon.json  smallFireBall.json  spaceShip.json  space_background.json  template.json
assets/images/: background.json  button_act.json  button_fight.json  button_item.json  button_mercy.json  heart.json  playerDefault.json  red.json  skeletonDragon.json  smallFireBall.json  spaceShip.json  space_background.json  target.json  template.json  undyne.json
assets/levels/: generator.py  id.json  level1.json  level2.json  level3.json  level4.json  template.json  test.json  yoshiIsland.json
assets/scripts/: black.lua  blue.lua  dvd.lua  dvdInverseSmart.lua  forwardSlightlyUp.lua  script.lua  template.lua
assets/shaders/: colorblind_default.frag  colorblind_deuteranopia.frag  colorblind_protanopia.frag  colorblind_tritanopia.frag
attacks/: defaultShoot1.json  defaultShoot3.json  fastBeam.json  fireBallSpam.json  laserBeam.json  spaceShipSpawn.json
attacks/yoshi/: bulletBill.json  diagonalFireBall.json
configs/: window.json
doc/: protocol_rfc.md  protocol_rfc.rst  protocol_rfc.txt  pull_request_template.md
entities/: bigFireBall.json  id.json  laserBeam.json  player.json  projectile.json  skeletonDragon.json  spaceShip.json
entities/yoshi/: bird.json  bulletBill.json  fatBird.json  fireBall.json  flyguy.json  kamek.json  yoshicopter.json
example/: compile.sh  rengineGraphicsTest.cpp
example/Clock/: clock.cpp  compile.sh
example/Graphics/: compile.sh  rengineGraphicsTest.cpp  test
exemple/: ServerMain.cpp  UserMain.cpp  main.cpp  test.cpp  test2.cpp
game/: .gitignore  CMakeLists.txt  compile.sh  compile_flags.txt  updateAssets.sh
game/entities/: entities.json
game/include/: utils.hpp
game/src/: find_entity.cpp  main.cpp
game/tests/: tests_run.sh
gameEngine/: CMakeLists.txt
gameEngine/src/Component/Render/Camera/: Camera.cpp
gameEngine/src/Component/Render/Music/: Music.cpp
gameEngine/src/Component/Render/Text/: Text.cpp
gameEngine/src/Component/User_Action/Controllable/: Controllable.cpp  Controllable.hpp
gameEngine/src/Entities/EntityManager/: Manager.cpp
gameEngine/src/Network/Messages/: OwnedMessage.hpp
gameEngine/src/Network/UserConnexion/: UserConnexion.hpp
images/: RTypeLogo.json  bigFireBall.json  playerDefault.json  spaceShip.json
images/menu/: enter.json  nasaStarship.json
images/yoshi/: bird.json  bulletBill.json  fatBird.json  fireBall.json  flyguy.json  kamek.json  yoshicopter.json
include/: game.hpp
levels/: debug.json  generator.py  id.json  level1.json  level3.json  template.json  yoshiIsland.json
release/: CMakeLists.txt
release/assets/: r-type.desktop.in
releaseAssets/: CMakeLists.txt  resources.rc
rengine/: .gitignore  .installHeader.ps1  .installHeader.sh  .patricia  CMakeLists.txt  Dockerfile  Makefile  RengineNetwork.hpp  RengineNetworkServer.hpp  compile.ps1  compile.sh  compileDocker.sh  compile_flags.txt  conanfile.txt  install.ps1  lint.sh  uninstall.sh
rengine/exemple/: main.cpp
rengine/src/: ComponentRegistry.hpp  ECS.hpp  Entity.hpp  Registry.hpp  SparseArray.hpp
rengine/tests/: Entity_t.cpp  sparse_array_t.cpp
scripts/: boss.lua  dvd.lua  forward.lua  smartShoot.lua  template.lua
shaders/: shader.frag
src/: ComponentData.hpp  ComponentRegistry.hpp  CustomUUID.hpp  ECS.hpp  Entity.hpp  Game.cpp  Registry.hpp  Rng.hpp  SparseArray.hpp  Sparse_Array.hpp  find_entity.cpp  main.c  main.cpp  tsqueue.hpp
src/Clock/: Clock.cpp  Clock.hpp  Clock.tpp
src/Command/: ConnexionDetail.cpp  EntityAction.cpp  EntityInfo.cpp  JsonDetail.cpp
src/Component/: Liste.hpp
src/Components/: Action.cpp  Action.hpp  Alert.cpp  Alert.hpp  Buff.hpp  Chrono.cpp  Chrono.hpp  Clickable.cpp  Clickable.hpp  Components.hpp  Configuration.hpp  HealthViewer.cpp  HealthViewer.hpp  HitBoxViewer.hpp  Hitbox.cpp  Hitbox.hpp  HitboxViewer.cpp  HitboxViewer.hpp  Life.cpp  Life.hpp  Liste.hpp  Metadata.hpp  Position.cpp  Position.hpp  Relationship.cpp  Relationship.hpp  Sprite.cpp  Sprite.hpp  Stats.hpp  Velocity.hpp
src/Config/: AttackBuffTypeEnum.hpp  AttackConfig.cpp  AttackConfig.hpp  AttackConfigResolver.hpp  BuffConfig.hpp  ConfigurationIdResolver.hpp  EntityConfig.cpp  EntityConfig.hpp  EntityConfigResolver.hpp  Enum.hpp  ImageConfig.cpp  ImageConfig.hpp  ImageConfigResolver.hpp  LevelConfig.cpp  LevelConfig.hpp  LevelConfigResolver.hpp  MissileConfig.hpp  TinyArrowConfig.cpp  TinyArrowConfig.hpp
src/Core/: Rengine.cpp  Rengine.hpp
src/Exceptions/: ECSExecption.hpp
src/Game/: EntityMaker.cpp  EntityMaker.hpp  HandleCommand.cpp  LevelManager.cpp  Team.hpp  (+9 more)
tests/: ComponentRegistry_t.cpp  ECS_t.cpp  Entity_t.cpp  SparseArray_t.cpp  tests_run.sh
(+324 files in other folders)
